static/styles/zulip.css
/* ... */
.nav .dropdown-menu a,
.typeahead.dropdown-menu a {
    color: inherit;
}

.typeahead.dropdown-menu {
    .active {
        color: hsl(0, 0%, 100%);

        .unsubscribed_icon {
            display: block;
            float: right;
            margin-top: 5px;
            margin-right: -12px;
            font-size: 0.8em;
            color: hsl(96, 7%, 73%);
        }
    }

    .unsubscribed_icon {
        display: none;
    }
}

.typeahead-image {
    display: inline-block;
    height: 21px;
    width: 21px;
    position: relative;
    margin-top: -7px;
    vertical-align: middle;
    top: 2px;
    right: 8px;
    border-radius: 4px;

    /* For FontAwesome icons used in place of images for some users. */
    font-size: 19px;
    text-align: center;
}

nav {
    .column-left {
        text-align: center;

        .nav-logo {
            display: inline-block;
            vertical-align: top;
            margin-top: 8px;
            height: 25px;
            max-width: 200px;
        }

        .company-name {
            display: inline-block;
            vertical-align: top;
            text-transform: uppercase;
            margin-top: 12px;
            margin-left: 8px;
            font-size: 1.2rem;
            font-weight: 600;
            color: hsl(170, 48%, 54%);
            letter-spacing: 0.1em;
            cursor: pointer;
        }
    }

    a {
        &.no-style:hover {
            text-decoration: none;
            cursor: pointer;
        }

        .no-style {
            text-decoration: none;
        }
    }
}

.modal-bg {
    background-color: hsl(0, 0%, 98%);
}

div.floating_recipient {
    border-collapse: separate;
    width: 100%;
    position: relative;
}

#floating_recipient_bar {
    top: $sidebar_top;
}

#bottom_whitespace {
    display: block;
    height: 300px;
}

.operator_value {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
    color: hsl(353, 70%, 65%);
}

.operator {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
}

#loading_older_messages_indicator,
#loading_newer_messages_indicator {
    margin: 10px;
}

#loading_older_messages_indicator_box_container,
#loading_newer_messages_indicator_box_container {
    position: absolute;
    left: 50%;
}

#loading_older_messages_indicator_box,
#loading_newer_messages_indicator_box {
    position: relative;
    left: -50%;
    top: -43px;
    z-index: 1;
    border-radius: 6px;
}

#page_loading_indicator {
    margin: 10px auto;
}

#page_loading_indicator_box_container {
    position: absolute;
    left: 50%;
}

#page_loading_indicator_box {
    position: relative;
    left: -50%;
    top: -43px;
    z-index: 1;
    border-radius: 6px;
}

.table-striped thead th {
    background-color: hsl(0, 0%, 27%);
    color: hsl(0, 0%, 100%);
}

#user-checkboxes {
    margin-top: 10px;

    .checkbox {
        display: block;

        input[type="checkbox"] {
            margin: 5px 0;
            float: none;
        }
    }
}

#stream-checkboxes {
    margin-top: 10px;
    display: none;

    .checkbox {
        display: block;
    }

    input[type="checkbox"] {
        margin: 5px 0;
        float: none;
    }
}

#copy-from-stream-expand-collapse {
    cursor: pointer;
}

.sub_button_row {
    text-align: center;
}

.small_square_button {
    padding: 0;
    border: none;
    font-size: 12px;
    width: 18px;
    height: 18px;
    border-radius: 4px;
    margin-bottom: 3px;

    &:focus {
        outline: none;
    }

    &.small_square_check {
        background-color: hsl(166, 35%, 57%);
        color: hsl(0, 0%, 95%);

        &:hover {
            background-color: hsl(156, 30%, 50%);
            color: hsl(0, 0%, 100%);
        }
    }

    &.small_square_x {
        background-color: hsl(0, 0%, 100%);
        color: hsl(0, 0%, 47%);

        &:hover {
            color: hsl(0, 0%, 18%);
        }
    }
}

div.topic_edit_spinner {
    display: inline-block;
    width: 18px;
    height: 18px;
    margin-top: -1px;
    padding: 2px;
    vertical-align: middle;
}

div.topic_edit_spinner .loading_indicator_spinner {
    width: 14px;
    height: 14px;
}

.message_edit_spinner {
    margin-right: 8px;
    padding-top: 5px;
}

.message_edit_spinner .loading_indicator_spinner {
    width: 20px;
    height: 20px;
}

.topic_move_spinner,
#do_delete_message_spinner {
    margin: 0 auto;
}

.modal {
    overflow: hidden;
    margin-top: 0;
    top: 5%;
    /* Bootstrap uses tabindex=-1 on modals for focus and ESC handling,
       so avoid the outline it causes */
    outline: 0;

    form {
        margin-bottom: 0;
    }
}

.modal-body {
    max-height: 60vh;
}

#invitee_emails {
    min-height: 40px;
    max-height: 300px;
    width: 96%;
    max-width: 96%;
}

#invite-user {
    .modal-header {
        padding: 7px 15px;
        border-color: hsl(0, 0%, 87%);

        .exit {
            font-size: 1.5rem;
            font-weight: 600;
            background-color: transparent;
            border: none;
            position: absolute;
            top: 6px;
            right: 5px;
            color: hsl(0, 0%, 67%);
        }
    }

    .overlay-content {
        position: relative;
        width: 500px;
        border-radius: 4px;
    }

    .modal-body {
        margin-bottom: 58px;
        position: relative;
    }

    .modal-footer {
        position: absolute;
        bottom: 0;
        width: calc(100% - 30px);
    }

    .invite-stream-controls {
        margin-top: 5px;
    }
}

#invite_status {
    display: none;
}

#invite-user-label {
    font-size: 1em;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
}

#multiuse_invite_status {
    display: none;
    margin-top: 7px;
    margin-bottom: -5px;
    text-align: left;
}

#invite-stream-checkboxes {
    padding-bottom: 26px;
}

#invite-method-choice {
    margin-top: 2px;
}

#multiuse_radio_section {
    margin-top: 4px;
    margin-bottom: -2px;
    display: none;
}
/* ... */

